content/vault/v1.8.x/content/api-docs/libraries.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Vault and the Vault logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/web-unified-docs/blob/-/LICENSE

layout: api
page_title: 'HTTP API: Libraries'
description: >-
  List of official and community contributed libraries for interacting with the
  Vault HTTP API.
---

# Libraries

The programming libraries listed on this page can be used to consume the API more conveniently.
Some are officially maintained while others are provided by the community.

## Official

These libraries are officially maintained by HashiCorp.

### Go

- [Vault Go Client](https://github.com/hashicorp/vault/tree/main/api)

```shell-session
$ go get github.com/hashicorp/vault/api
```

### Ruby

- [Vault Ruby Client](https://github.com/hashicorp/vault-ruby)

```shell-session
$ gem install vault
```

## Community

These libraries are provided by the community.

### Ansible

- [ansible-vault](https://github.com/jhaals/ansible-vault) lookup plugin without third-party dependencies.
- [Ansible Modules Hashivault](https://pypi.python.org/pypi/ansible-modules-hashivault)

```shell-session
$ pip install ansible-modules-hashivault
```

### C&#35;

- [VaultSharp](https://github.com/rajanadar/VaultSharp) (.NET Standard 2.0 & 1.3, .NET Core >= 1.0.0, .NET 4.5, .NET 4.6, Mono, iOS, Android, Mac, UWP etc.)

```shell-session
$ Install-Package VaultSharp
```

- [Vault.NET](https://github.com/Chatham/Vault.NET)

```shell-session
$ Install-Package Vault
```

### C++

- [libvault](https://github.com/abedra/libvault)

### Clojure

- [vault-clj](https://github.com/amperity/vault-clj)

### Elixir

- [libvault](https://hex.pm/packages/libvault)
- [vaultex](https://hex.pm/packages/vaultex)

### Erlang

- [canal](https://github.com/rkallos/canal)

### Go

- [vc](https://github.com/adfinis-sygroup/vault-client)

```shell-session
$ go get github.com/adfinis-sygroup/vault-client
```

- [vaultgo](https://github.com/mittwald/vaultgo)

```shell-session
$ go get github.com/mittwald/vaultgo
```

### Haskell

- [vault-tool](https://hackage.haskell.org/package/vault-tool)

```shell-session
$ cabal install vault-tool
```

- [gothic](http://hackage.haskell.org/package/gothic)

```shell-session
$ stack install gothic
```

### Java

- [Spring Vault](https://github.com/spring-projects/spring-vault)
- [vault-java-driver](https://github.com/BetterCloud/vault-java-driver)

### Kotlin

- [vault-kotlin](https://github.com/kunickiaj/vault-kotlin)

### Node.js

- [node-vault](https://github.com/kr1sp1n/node-vault)

```shell-session
$ npm install node-vault
```

- [vaulTS](https://github.com/mittwald/vaulTS) (Github NPM Registry)

```shell-session
$ npm install @mittwald/vaults
```

### PHP

- [vault-php-sdk](https://github.com/jippi/vault-php-sdk)

```shell-session
$ composer require jippi/vault-php-sdk
```

- [vault-php-sdk](https://github.com/violuke/vault-php-sdk) extended from jipppi

```shell-session
$ composer require violuke/vault-php-sdk
```

- [vault-php](https://github.com/CSharpRU/vault-php)

```shell-session
$ composer require csharpru/vault-php
```

- [vault-php](https://github.com/mittwald/vaultPHP)

```shell-session
$ composer require mittwald/vault-php
```

### PowerShell

- [Zyborg.Vault](https://github.com/zyborg/Zyborg.Vault)

```PowerShell
Install-Module Zyborg.Vault
```

### Python

- [HVAC](https://github.com/ianunruh/hvac)

```shell-session
$ pip install hvac
```

- [Async-HVAC](https://github.com/Aloomaio/async-hvac)

```shell-session
$ pip install async-hvac
```

### R

- [vaultr](https://github.com/vimc/vaultr)

### Rust

- [HashicorpVault](https://crates.io/crates/hashicorp_vault)

### Scala

- [scala-vault](https://github.com/janstenpickle/scala-vault)
